--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
     "@expo/metro-runtime": "~5.0.4",
     "@react-navigation/native": "^7.1.14",
     "@react-navigation/native-stack": "^7.3.21",
-    "expo": "~53.0.13",
+    "expo": "^53.0.17",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "react-native": "0.79.4",
+    "react-native": "^0.79.5",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-pager-view": "6.7.1",
     "react-native-paper": "^5.14.5",
